# Klaviyo-Dev-MCP

./: .gitignore  README.md  pyproject.toml  run_mcp.sh  setup_index.py
src/mcp_server/: engineering_guidebook.py  main.py
src/retrieval_stuff/: README.md  build_confluence_index.py  build_eng_handbook_index.py  confluence_scraper.py  document_parser.py  index.py  retriever.py
src/retrieval_stuff/examples/: EG_ingestion_testing.py  confluence_testing.py  main_example.py  sentence_transformer_testing.py  test_index.py
